# OpsZen

./: .gitignore  .pre-commit-config.yaml  EXAMPLES.md  LOG_ANALYZER_IMPLEMENTATION.md  Makefile  QUICKSTART_LOGS.md  README.md  ROADMAP.md  TESTING.md  TEST_SUITE_SUMMARY.md  activate_venv.sh  config.yaml.example  env.example  format.sh  precommit.sh  pyproject.toml  pytest.ini  run_tests.sh  test_logs.py
.github/: DEPLOYMENT_CHECKLIST.md  README.md  validate.sh
.github/workflows/: build.yml  ci.yml  nightly.yml  pr-check.yml  tests.yml
docs/: BUILD_MIGRATION.md  CI_CD.md  CI_QUICK_REF.md  CONFIGURATION.md  CONFIG_QUICK_REF.md  ERROR_HANDLING_LOGGING.md  GITHUB_ACTIONS_FIX.md  UV_CI_QUICK_REF.md
src/: cli.py  version.py
src/config/: __init__.py  config_loader.py  config_manager.py
src/container/: docker_manager.py
src/exceptions/: __init__.py
src/infrastructure/: config.yaml  provisioner.py
src/logging/: __init__.py
src/monitoring/: system_monitor.py
src/remote/: ssh_config.py  ssh_manager.py
src/utils/: __init__.py
tests/: QUICK_REFERENCE.md  README.md  __init__.py  conftest.py  pytest_venv_plugin.py  requirements-test.txt
tests/integration/: __init__.py  test_log_workflow.py
tests/unit/: __init__.py  test_docker_manager.py  test_infrastructure_provisioner.py  test_log_analyzer.py  test_ssh_config.py  test_ssh_manager.py  test_system_monitor.py
tests/unit/config/: __init__.py  test_config_loader.py  test_config_manager.py
tests/unit/exceptions/: test_exceptions.py
tests/unit/logging/: test_logging.py
tests/unit/utils/: test_retry.py
