[project]
name = "opszen"
version = "0.8.0"
description = "A comprehensive collection of Python-based DevOps tools"
authors = [
    { name = "TianaNanta", email = "andrianjakananta@gmail.com" }
]
dependencies = [
    "psutil>=5.9.0",
    "docker>=6.1.2",
    "boto3>=1.28.0",
    "rich>=13.3.5",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "paramiko>=3.3.1",
    "scp>=0.14.5",
    "asyncssh>=2.14.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
devops = "src.cli:app"
opszen = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff configuration
[tool.ruff]
# Same as Black
line-length = 88
indent-width = 4

# Assume Python 3.8+
target-version = "py38"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".pytest_cache",
    "htmlcov",
    ".benchmarks",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
# Plus:
# - isort (I) for import sorting
# - pep8-naming (N) for naming conventions
# - pyupgrade (UP) for Python version upgrades
# - flake8-bugbear (B) for common bugs
# - flake8-simplify (SIM) for code simplification
# - flake8-comprehensions (C4) for comprehension improvements
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4"]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "N802",  # Function name should be lowercase (for pytest fixtures)
    "N806",  # Variable in function should be lowercase (for pytest)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, rather than tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending
line-ending = "auto"

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.1",
    "faker>=35.2.2",
    "freezegun>=1.5.5",
    "hypothesis>=6.113.0",
    "prek>=0.3.1",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-doctest-custom>=1.0.0",
    "pytest-faker>=2.0.0",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.1",
    "responses>=0.25.8",
    "ruff>=0.15.0",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, relative imports, and unused variables (mocks)
"tests/**/*" = ["PLR2004", "S101", "TID252", "F841"]
